# vibe_coding_a2a_agent

./: .env.example  .gitignore  A2A_ADK_Training_Guide.md  AGENT_DESIGN_PATTERNS.md  CLOUD_RUN_STREAMING_PLAN.md  GEMINI.md  README.md  cleanup.sh  configure.sh  configure_project.sh.example
a2a-on-ae-multiagent-memorybank/: README.md  pyproject.toml
a2a-on-ae-multiagent-memorybank/a2a_multiagent_mcp_app/a2a_agents/: .env.example  README.md  deploy_agents.sh  deploy_cocktail_agent.py  deploy_hosting_agent.ipynb  deploy_hosting_agent.py  deploy_weather_agent.py  pyproject.toml  redeploy_agents.sh
a2a-on-ae-multiagent-memorybank/a2a_multiagent_mcp_app/a2a_agents/common/: adk_base_mcp_agent_executor.py  adk_orchestrator_agent.py  adk_orchestrator_agent_executor.py
a2a-on-ae-multiagent-memorybank/a2a_multiagent_mcp_app/a2a_agents/hosting_agent/: agent_executor.py
a2a-on-ae-multiagent-memorybank/a2a_multiagent_mcp_app/demo/ui/: Containerfile  main.py  minimal_app.py  pyproject.toml
a2a-on-ae-multiagent-memorybank/a2a_multiagent_mcp_app/demo/ui/components/: async_poller.js  form_render.py
a2a-on-ae-multiagent-memorybank/a2a_multiagent_mcp_app/demo/ui/pages/: conversation.py  event_list.py  home.py
a2a-on-ae-multiagent-memorybank/a2a_multiagent_mcp_app/demo/ui/service/server/: adk_host_manager.py  application_manager.py  (+2 more)
a2a-on-ae-multiagent-memorybank/a2a_multiagent_mcp_app/demo/ui/state/: host_agent_service.py
a2a-on-ae-multiagent-memorybank/a2a_multiagent_mcp_app/frontend_option1/: .env.example  README.md  deploy_frontend.sh  main.py  pyproject.toml
(+9 files in other folders)
