[project]
name = "a2a-on-ae-multiagent-memorybank"
version = "0.1.0"
description = "A2A on AE Multi-Agent Memory Bank"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "pydantic>=2.11.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "mesop>=1.0.0",
    "a2a-sdk>=0.3.5",
    "pandas>=2.2.0",
    "google-genai>=1.36.0",
    "google-adk[a2a]>=1.14.1",
    "litellm",
    "black>=25.9.0",
    "click>=8.2.1",
    "flake8>=7.3.0",
    "google-auth-oauthlib>=1.2.2",
    "google-auth[openid]>=2.40.3",
    "google-cloud-aiplatform>=1.113.0",
    "gradio>=5.46.1",
    "ipykernel>=6.30.1",
    "nbqa>=1.9.1",
    "pip>=25.2",
]

[tool.setuptools.packages.find]
where = ["a2a_multiagent_mcp_app"]
include = ["*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff>=0.11.2"]